# microbarometer

./: .appveyor.yml  .gitignore  .mypy.ini  .travis.yml  PlotPressure.py  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
microbarometer/: __init__.py  io.py  plots.py
microbarometer/tests/: sample.asc  test_all.py
pymicrobarometer/: __init__.py  plots.py
tests/: sample.asc  test_all.py
