[metadata]
name = pymicrobarometer
version = 0.1.0
description = Read SEED microbarometer data and plot.
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/pymicrobarometer
keywords = 
  weather
  microbarometer
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: GIS
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires = 
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  obspy
  cython
  cartopy
  pandas

[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot = 
  matplotlib

[options.entry_points]
console_scripts =
  PlotPressure = PlotPressure:main


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  RuntimeError
  NotImplementedError
  ImportError
  KeyError
  FileNotFoundError
  CalledProcessError
  logging.warning
  ValueError
  TypeError
