[metadata]
name = microbarometer
version = 0.5.0
description = Read SEED microbarometer data and plot.
author = Michael Hirsch, Ph.D.
url = https://github.com/space-physics/microbarometer
keywords =
  weather
  microbarometer
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: GIS
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  pandas

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plot =
  matplotlib
io =
  obspy
  cartopy
